Implementation of unitary tile and board with dynamic raised and call fraquency definition

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -123,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontend"
+    }
+  },
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": "9a6cd2f5-d41f-4094-b432-498d074deb9a"
+  }
 }
